--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/Modelo/_GridViewPartial_modelo_af.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/Modelo/_GridViewPartial_modelo_af.cshtml
@@ -1,15 +1,15 @@
 @using System.Web.UI.WebControls;
 @{
-    var grid = Html.DevExpress().GridView(settings => {
-        settings.Name = "GridViewPartial_ActivoFijo_importacion";
-        settings.CallbackRouteValues = new { Controller = "ActivoFijo", Action = "GridViewPartial_ActivoFijo_importacion" };
+    var grid = Html.DevExpress().GridView(settings =>
+    {
+        settings.Name = "GridViewPartial_modelo_af";
+        settings.CallbackRouteValues = new { Controller = "Modelo", Action = "GridViewPartial_modelo_af" };
+        settings.KeyFieldName = "IdModelo";
         settings.Width = Unit.Percentage(100);
-        settings.KeyFieldName = "IdActivoFijo";
-        settings.Width = Unit.Percentage(100);
+
         //Configuración para que la grilla no muestre texto completo
         settings.SettingsBehavior.AllowEllipsisInText = true;
         settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
-
         //Configuracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
@@ -43,29 +43,50 @@
             t.Items.Add(GridViewToolbarCommand.ExportToRtf).Text = "Exportar a RTF";
             t.Items.Add(GridViewToolbarCommand.ExportToCsv).Text = "Exportar a CSV";
         });
-        settings.SettingsExport.RenderBrick = (sender, e) =>
+        settings.HtmlRowPrepared = (s, e) =>
         {
-            if (e.RowType == GridViewRowType.Data && e.VisibleIndex % 2 == 0)
-                e.BrickStyle.BackColor = System.Drawing.Color.FromArgb(0xEE, 0xEE, 0xEE);
+            if (Convert.ToBoolean(e.GetValue("Estado")) == false)
+            {
+                e.Row.ForeColor = System.Drawing.Color.Red;
+            }
         };
-        settings.Columns.Add("IdActivoFijo", "ID").Width = Unit.Percentage(5);
-        settings.Columns.Add("Af_Nombre", "Descripción").Width = Unit.Percentage(5);
-        settings.Columns.Add("IdCategoriaAF", "Categoría").Width = Unit.Percentage(5);
-        settings.Columns.Add("IdActivoFijoTipo", "Tipo").Width = Unit.Percentage(5);
-        settings.Columns.Add("IdSucursal", "Sucursal").Width = Unit.Percentage(5);
-        settings.Columns.Add("IdDepartamento", "Departamento").Width = Unit.Percentage(5);
-        settings.Columns.Add("IdMarca", "Marca").Width = Unit.Percentage(5);
-        settings.Columns.Add("IdModelo", "Modelo").Width = Unit.Percentage(5);
-        settings.Columns.Add("IdEmpleadoCustodio", "Custodio").Width = Unit.Percentage(5);
-        settings.Columns.Add("IdEmpleadoEncargado", "Encargado").Width = Unit.Percentage(5);
-        settings.Columns.Add("Af_fecha_compra", "Fec Compra").Width = Unit.Percentage(5);
-        settings.Columns.Add("Af_fecha_ini_depre", "Ini Dep").Width = Unit.Percentage(5);
-        settings.Columns.Add("Af_fecha_fin_depre", "Fin Dep").Width = Unit.Percentage(5);
-        settings.Columns.Add("Af_costo_compra", "Cto Compra").Width = Unit.Percentage(5);
-        settings.Columns.Add("Af_Depreciacion_acum", "Dep Acum").Width = Unit.Percentage(5);
-        settings.Columns.Add("Af_ValorSalvamento", "Salvamento").Width = Unit.Percentage(5);
+        settings.Columns.Add(c =>
+        {
+            c.Caption = "#";
+            c.SetDataItemTemplateContent(tc =>
+            {
+                if (Convert.ToBoolean(DataBinder.Eval(tc.DataItem, "Estado")) == true)
+                {
+                    ViewContext.Writer.Write(
+                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdModelo = DataBinder.Eval(tc.DataItem, "IdModelo")}) + "&nbsp;" +
+                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdModelo = DataBinder.Eval(tc.DataItem, "IdModelo") },
+                            new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
+                    );
+                }
+            });
+            c.SetHeaderTemplateContent(tc =>
+            {
+                ViewContext.Writer.Write(
+                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa}).ToHtmlString()
+                );
+            });
+            c.Settings.AllowDragDrop = DefaultBoolean.False;
+            c.Settings.AllowSort = DefaultBoolean.False;
+            c.Width = System.Web.UI.WebControls.Unit.Pixel(150);
+        });
 
-        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
+        settings.Columns.Add("IdModelo", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
+        settings.Columns.Add("mo_Descripcion", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(70);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "Estado";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        });
     });
 }
 @grid.Bind(Model).GetHtml()
