--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/CuentasPorCobrarReportes/CXC_003.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/CuentasPorCobrarReportes/CXC_003.cshtml
@@ -78,6 +78,19 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            <label for="CodDocumentoTipo">Tipo</label>
+                            @Html.DevExpress().ComboBoxFor(q => q.IdCobro_tipo, setting =>
+                            {
+                                setting.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                setting.Properties.Items.Add("TODOS", "");
+                                setting.Properties.Items.Add("MANUALES", "M");
+                                setting.Properties.Items.Add("ELECTRONICOS", "E");
+                            }).GetHtml()
+                            @Html.ValidationMessageFor(q => q.IdCobro_tipo, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
 
                 </div>
             </div>
