--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/Cobranza/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/Cobranza/Nuevo.cshtml
@@ -51,12 +51,37 @@
     }
     function OnSelectionChanged(s, e) {
         s.GetSelectedFieldValues("secuencia", GetSelectedFieldValuesCallback);
+        s.GetSelectedFieldValues("Saldo", GetSelectedFieldValuesCallback_Saldo);
     }
     function GetSelectedFieldValuesCallback(values) {
         //Capture all selected keys
         selectedIDs = values.join(',');
     }
 
+    function GetSelectedFieldValuesCallback_Saldo(values) {
+        TotalRows = values.join(',');
+
+        var datos = {
+            TotalRows: TotalRows
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("SumarValorItems", "Cobranza", new { Area = "CuentasPorCobrar" })',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                $("#TotalRows").html("Total: $" + data);
+
+            },
+            error: function (error) {
+            }
+        });
+
+    }
     //function MostrarModal() {
     //    if (Number($("#cr_TotalCobro").val()) == 0) {
     //        alert("Debe ingresar el total a cobrar");
@@ -230,6 +255,7 @@
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                     <h4 class="modal-title">Facturas</h4>
+                    <label id="TotalRows"></label>
                 </div>
                 <div class="modal-body">
 
