--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ParametroBanco/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ParametroBanco/Index.cshtml
@@ -11,7 +11,7 @@
 @using (Html.BeginForm("Index", "ParametroBanco", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdEmpresa)
-
+    @Html.HiddenFor(q => q.IdTransaccionSession)
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-3">
@@ -77,6 +77,13 @@
                            }).GetHtml()
                     @Html.ValidationMessageFor(q => q.ValidarSoloCuentasArchivo, "", new { @class = "text-danger" })
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                @Html.Action("GridViewPartial_CbteBan_x_CbteCble")
             </div>
         </div>
     </div>
