--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Nuevo.cshtml
@@ -843,6 +843,7 @@ function cargar_lista_contactos() {
                                        settings.Properties.EditFormat = EditFormat.Date;
                                        settings.Properties.EditFormatString = "dd/MM/yyyy";
                                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                                       settings.Properties.AllowMouseWheel = false;
                                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
                                        settings.Properties.ClientSideEvents.DateChanged = "function(s,e){cargar_fecha_vencimiento();}";
                                    }).GetHtml()
